--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <div id="container-2">
-        <div class="container-2-box">
+        <div class="container-2-box" data-aos="fade-left">
           <img src="./img/schampoo.png" alt="produkt" />
 
           <div class="container-2-box-text">
@@ -196,12 +196,12 @@
             Kontakt Information <br />
             För bokning eller funderingar
           </h2>
-          <p>Telefon: <a href="tel:+46701234567">+46 70 123 45 67</a></p>
+          <p>Telefon: <a href="tel:+46701234567">+46 76 324 10 43</a></p>
           <p>
             Email:
-            <a href="mailto:info@dinrekond.se">Josef.matti05@gmail.com</a>
+            <a href="mailto:info@dinrekond.se">info@dinrekond.se</a>
           </p>
-          <p>Adress: Väg 123, 12345 Stad, Sverige</p>
+          <p>Adress: Postängsvägen 158, 14552 Norsborg, Sverige</p>
         </div>
 
         <div class="footer-section">
