--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <img src="./img/Dinrekond.png" alt="Loga" />
           <div class="transparent">
             <p>
-              kommen till DinRekond! Vi är ett lokalt, personligt företag som
+              Välkommen till DinRekond! Vi är ett lokalt, personligt företag som
               erbjuder professionell rekond till bilar och andra fordon direkt
               på plats hos dig. Med ett öga för detaljer och en passion för
               perfektion ser vi till att ditt fordon ser ut som nytt igen,
