--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <div id="container-2">
-        <div class="container-2-box">
+        <div class="container-2-box" data-aos="fade-left">
           <img src="./img/schampoo.png" alt="produkt" />
 
           <div class="container-2-box-text">
