--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div id="container-3">
         <h1>Våra priser</h1>
 
-        <div id="container-3-boxes">
+        <div id="container-3-boxes-tvatt">
           <div class="container-3-box" id="container-3-box" data-aos="fade-up">
             <h2>Exteriörtvätt – 499 kr</h2>
 
@@ -117,7 +117,7 @@
 
             <p>
               Vår exteriörtvätt ger din bil en noggrann rengöring från topp till
-              tå för endast 299 kr. Vi erbjuder en komplett utvändig tvätt som
+              tå för endast 499 kr. Vi erbjuder en komplett utvändig tvätt som
               inkluderar avfettning, däck- och fälgtvätt samt en genomgående
               detaljering för att få fram den bästa glansen. Perfekt för dig som
               vill att din bil ska se fräsch och välvårdad ut på utsidan!
@@ -142,7 +142,7 @@
             <img src="./img/interiorTvatt.jpg" alt="tvatt" />
 
             <p>
-              Vår interiörtvätt för 299 kr ger din bils insida en fräsch och
+              Vår interiörtvätt för 499 kr ger din bils insida en fräsch och
               noggrann rengöring. Vi städar och detaljar hela interiören, från
               dammsugning av säten och mattor till avtorkning av paneler och
               rengöring av fönster. Perfekt för att återställa en ren och
@@ -171,7 +171,7 @@
             </div>
 
             <p>
-              För endast 499 kr erbjuder vi en komplett helrekond som inkluderar
+              För endast 799 kr erbjuder vi en komplett helrekond som inkluderar
               både invändig och utvändig tvätt. Du får en noggrann exteriörtvätt
               med avfettning samt däck- och fälgtvätt, och vi detaljstädar även
               interiören med dammsugning, avtorkning och fönsterrengöring. Genom
@@ -184,6 +184,29 @@
             </div>
 
             <button id="button3">&darr;</button>
+          </div>
+        </div>
+
+
+        <h1 id="dackskift">Däckskift</h1>
+
+
+        <div id="container-3-boxes-dack">
+          <div></div>
+
+          <div class="container-3-box" id="color" data-aos="fade-up">
+            <h2>Däckskift - 499 kr</h2>
+
+            <img src="./img/dackskift.webp" id="dack" alt="tvatt" />
+
+            <p>
+              Vi erbjuder snabbt och smidigt däckskifte för 499 kr, så att du enkelt kan byta mellan sommar- och vinterdäck. Kombinerar du däckskiftet med någon av våra tvättjänster får du dessutom 50 % rabatt på däckskiftet, vilket ger dig ett riktigt bra erbjudande och både rena däck och en fräsch bil!
+
+
+            </p>
+          </div>
+
+          <div></div>
           </div>
         </div>
       </div>
