--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <div id="container-1-transparent">
         <div id="container-1">
-          <img src="./img/Dinrekond.png" alt="Loga" />
+          <img src="./img/dinrekondLoga.png" alt="Loga" />
           <div class="transparent">
             <p>
               Välkommen till DinRekond! Vi är ett lokalt, personligt företag som
