--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="DinRekond offers professional car detailing services at your location. Experience quality and convenience.">
-    <meta name="keywords" content="bilrekonditionering, bilvård, professionell bilrekond, mobil bilvård, tvätt och rekond, miljövänliga bilprodukter, däckskifte, inre och yttre bilvård, biltvätt, bilpleje" />
-
+    <meta
+      name="description"
+      content="DinRekond offers professional car detailing services at your location. Experience quality and convenience."
+    />
+    <meta
+      name="keywords"
+      content="bilrekonditionering, bilvård, professionell bilrekond, mobil bilvård, tvätt och rekond, miljövänliga bilprodukter, däckskifte, inre och yttre bilvård, biltvätt, bilpleje"
+    />
 
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/mobile.css" />
@@ -116,11 +121,20 @@
           <div class="container-2-box-text">
             <h2>Varför DinRekond?</h2>
             <p>
-              När du väljer DinRekond får du inte bara ett prisvärt och kostnadseffektivt alternativ för rekonditionering av ditt fordon, utan även en tjänst präglad av vår passion för bilar och kundnöjdhet. Vi strävar efter att erbjuda högkvalitativa tjänster till konkurrenskraftiga priser, vilket gör att du får mycket valuta för pengarna. Vår mobila lösning innebär att vi kommer till dig, vilket ger dig bekvämlighet och tidsbesparing. Vi är dedikerade till att återställa och bevara skönheten hos ditt fordon, och vi är stolta över att använda miljövänliga produkter som skyddar både din bil och planeten. Välj DinRekond för en pålitlig och professionell upplevelse!
+              När du väljer DinRekond får du inte bara ett prisvärt och
+              kostnadseffektivt alternativ för rekonditionering av ditt fordon,
+              utan även en tjänst präglad av vår passion för bilar och
+              kundnöjdhet. Vi strävar efter att erbjuda högkvalitativa tjänster
+              till konkurrenskraftiga priser, vilket gör att du får mycket
+              valuta för pengarna. Vår mobila lösning innebär att vi kommer till
+              dig, vilket ger dig bekvämlighet och tidsbesparing. Vi är
+              dedikerade till att återställa och bevara skönheten hos ditt
+              fordon, och vi är stolta över att använda miljövänliga produkter
+              som skyddar både din bil och planeten. Välj DinRekond för en
+              pålitlig och professionell upplevelse!
             </p>
           </div>
         </div>
-        
       </div>
 
       <div id="container-3">
@@ -128,59 +142,133 @@
 
         <div id="container-3-boxes-tvatt">
           <div class="container-3-box" id="container-3-box1" data-aos="fade-up">
-            <h2>Exteriörtvätt – fr. 499 kr</h2>
+            <h2>Exteriörtvätt – fr. 399 kr</h2>
 
             <img src="./img/exteriorTvatt.webp" alt="tvatt" />
 
             <p>
               Vår exteriörtvätt ger din bil en noggrann rengöring från topp till
-              tå för endast 499 kr. Vi erbjuder en komplett utvändig tvätt som
-              inkluderar avfettning, däck- och fälgtvätt samt en genomgående
-              detaljering för att få fram den bästa glansen. Perfekt för dig som
-              vill att din bil ska se fräsch och välvårdad ut på utsidan!
+              tå. Vi erbjuder en komplett utvändig tvätt som inkluderar
+              avfettning, däck- och fälgtvätt samt en genomgående detaljering
+              för att få fram den bästa glansen. Perfekt för dig som vill att
+              din bil ska se fräsch och välvårdad ut på utsidan!
             </p>
 
             <div class="extra-content" id="extra-content">
-              <p>
-                &bull; Däck- & fälgtvätt <br />
-                &bull; Kallavfettning (vid extra smutsig bil) <br />
-                &bull; Förtvättsmedel <br />
-                &bull; Schampoonering & kontakttvätt <br />
-                &bull; Avslutning med vax skydd <br />
-              </p>
+              <hr />
+              <div class="logos">
+                <div class="size-info-row">
+                  <div class="size-info">
+                    <img src="./img/hatchback.svg" alt="hatchback" />
+                    <p>Liten - 399kr</p>
+                  </div>
+
+                  <div class="size-info">
+                    <img src="./img/sedan.svg" alt="sedan" />
+                    <p>Mellan - 499kr</p>
+                  </div>
+                </div>
+
+                <div class="size-info-row">
+                  <div class="size-info">
+                    <img src="./img/suv.svg" alt="suv" />
+                    <p>Stor - 599kr</p>
+                  </div>
+
+                  <div class="size-info">
+                    <img src="./img/coupe.svg" alt="supercar" />
+                    <p>Sport - 699kr</p>
+                  </div>
+                </div>
+              </div>
+
+              <hr />
+
+              <div>
+                <p>
+                  &bull; Däck- & fälgtvätt <br />
+                  &bull; Kallavfettning (vid extra smutsig bil) <br />
+                  &bull; Förtvättsmedel <br />
+                  &bull; Schampoonering & kontakttvätt <br />
+                  &bull; Avslutning med vax skydd & däckglans <br />
+                </p>
+              </div>
             </div>
 
-            <button id="button1" class="container-3-button" onclick="changeHeight('container-3-box1')">&darr;</button>
+            <button
+              id="button1"
+              class="container-3-button"
+              onclick="changeHeight('container-3-box1')"
+            >
+              &darr;
+            </button>
           </div>
 
           <div class="container-3-box" id="container-3-box2" data-aos="fade-up">
-            <h2>Interiörtvätt – fr. 499 kr</h2>
+            <h2>Interiörtvätt – fr. 399 kr</h2>
 
             <img src="./img/interiorTvatt.jpg" alt="tvatt" />
 
             <p>
-              Vår interiörtvätt för 499 kr ger din bils insida en fräsch och
-              noggrann rengöring. Vi städar och detaljar hela interiören, från
+              Vår interiörtvätt ger din bils insida en fräsch och noggrann
+              rengöring. Vi städar och detaljar hela interiören, från
               dammsugning av säten och mattor till avtorkning av paneler och
               rengöring av fönster. Perfekt för att återställa en ren och
               trivsam känsla i bilen!
             </p>
 
             <div class="extra-content">
+              <hr />
+              <div class="logos">
+                <div class="size-info-row">
+                  <div class="size-info">
+                    <img src="./img/hatchback.svg" alt="hatchback" />
+                    <p>Liten - 399kr</p>
+                  </div>
+
+                  <div class="size-info">
+                    <img src="./img/sedan.svg" alt="sedan" />
+                    <p>Mellan - 499kr</p>
+                  </div>
+                </div>
+
+                <div class="size-info-row">
+                  <div class="size-info">
+                    <img src="./img/suv.svg" alt="suv" />
+                    <p>Stor - 599kr</p>
+                  </div>
+
+                  <div class="size-info">
+                    <img src="./img/coupe.svg" alt="supercar" />
+                    <p>Sport - 699kr</p>
+                  </div>
+                </div>
+              </div>
+
+              <hr />
+
               <p>
                 &bull; Dammsugning <br />
-                &bull; Tvätt med medel och uppsugning av våt sugare <br />
-                &bull; Noggrann detaljering <br />
                 &bull; Tvätt för alla mattor (inclusive bagage) <br />
+                &bull; Rengöring av paneler med medel<br />
+                &bull; Borttagning av fläckar på säten <br />
+                &bull; Noggrann rengöring av dörrkanter (inclusive bagage)
+                <br />
                 &bull; Fönsterputs <br />
               </p>
             </div>
 
-            <button id="button2" class="container-3-button" onclick="changeHeight('container-3-box2')">&darr;</button>
+            <button
+              id="button2"
+              class="container-3-button"
+              onclick="changeHeight('container-3-box2')"
+            >
+              &darr;
+            </button>
           </div>
 
           <div class="container-3-box" id="container-3-box3" data-aos="fade-up">
-            <h2>Helrekond – fr. 799 kr</h2>
+            <h2>Helrekond – fr. 699 kr</h2>
 
             <div id="images">
               <img src="./img/exteriorTvatt.webp" alt="exterior" />
@@ -188,23 +276,56 @@
             </div>
 
             <p>
-              För endast 799 kr erbjuder vi en komplett helrekond som inkluderar
-              både invändig och utvändig tvätt. Du får en noggrann exteriörtvätt
-              samt interiörtvätt. Genom att välja helrekonden får du ett bättre 
-              pris än att bara enbart boka exteriör eller interiör tvätt.
+              Vi erbjuder en komplett helrekond som inkluderar både invändig och
+              utvändig tvätt. Du får en noggrann exteriörtvätt samt
+              interiörtvätt. Genom att välja helrekonden får du ett bättre pris
+              än att bara enbart boka exteriör eller interiör tvätt.
             </p>
 
             <div class="extra-content">
+              <hr />
+              <div class="logos">
+                <div class="size-info-row">
+                  <div class="size-info">
+                    <img src="./img/hatchback.svg" alt="hatchback" />
+                    <p>Liten - 699kr</p>
+                  </div>
+
+                  <div class="size-info">
+                    <img src="./img/sedan.svg" alt="sedan" />
+                    <p>Mellan - 799kr</p>
+                  </div>
+                </div>
+
+                <div class="size-info-row">
+                  <div class="size-info">
+                    <img src="./img/suv.svg" alt="suv" />
+                    <p>Stor - 899kr</p>
+                  </div>
+
+                  <div class="size-info">
+                    <img src="./img/coupe.svg" alt="supercar" />
+                    <p>Sport - 999kr</p>
+                  </div>
+                </div>
+              </div>
+
+              <hr />
+
               <p>&bull; Allt som ingår i exteriör & interiör tvätt<br /></p>
             </div>
 
-            <button id="button3" class="container-3-button" onclick="changeHeight('container-3-box3')">&darr;</button>
+            <button
+              id="button3"
+              class="container-3-button"
+              onclick="changeHeight('container-3-box3')"
+            >
+              &darr;
+            </button>
           </div>
         </div>
 
-
         <h1 id="dackskift">Däckskifte</h1>
-
 
         <div id="container-3-boxes-dack">
           <div></div>
@@ -215,14 +336,15 @@
             <img src="./img/dackskift.webp" id="dack" alt="tvatt" />
 
             <p>
-              Vi erbjuder snabbt och smidigt däckskifte för 499 kr, så att du enkelt kan byta mellan sommar- och vinterdäck. Kombinerar du däckskiftet med någon av våra tvättjänster får du dessutom 50 % rabatt på däckskiftet, vilket ger dig ett riktigt bra erbjudande och både rena däck och en fräsch bil!
-
-
+              Vi erbjuder snabbt och smidigt däckskifte för 499 kr, så att du
+              enkelt kan byta mellan sommar- och vinterdäck. Kombinerar du
+              däckskiftet med någon av våra tvättjänster får du dessutom 50 %
+              rabatt på däckskiftet, vilket ger dig ett riktigt bra erbjudande
+              och både rena däck och en fräsch bil!
             </p>
           </div>
 
           <div></div>
-          </div>
         </div>
       </div>
     </main>
