--- a/index.html
+++ b/index.html
@@ -324,28 +324,28 @@
             </button>
           </div>
         </div>
+      </div>
+      <h1 id="dackskift">Däckskifte</h1>
+      <div id="container-3-boxes-dack">
+        <div></div>
 
-        <h1 id="dackskift">Däckskifte</h1>
+        <div class="container-3-box" id="color" data-aos="fade-up">
+          <h2>Däckskifte - fr. 249 kr</h2>
 
-        <div id="container-3-boxes-dack">
-          <div></div>
+          <img src="./img/dackskift.webp" id="dack" alt="tvatt" />
 
-          <div class="container-3-box" id="color" data-aos="fade-up">
-            <h2>Däckskifte - 499 kr</h2>
-
-            <img src="./img/dackskift.webp" id="dack" alt="tvatt" />
-
-            <p>
-              Vi erbjuder snabbt och smidigt däckskifte för 499 kr, så att du
-              enkelt kan byta mellan sommar- och vinterdäck. Kombinerar du
-              däckskiftet med någon av våra tvättjänster får du dessutom 50 %
-              rabatt på däckskiftet, vilket ger dig ett riktigt bra erbjudande
-              och både rena däck och en fräsch bil!
-            </p>
-          </div>
-
-          <div></div>
+          <p>
+            Vi erbjuder snabbt och smidigt däckskifte för 499 kr, så att du
+            enkelt kan byta mellan sommar- och vinterdäck.
+            <u
+              >Kombinerar du däckskiftet med någon av våra tvättjänster får du
+              dessutom 50 % rabatt på däckskiftet</u
+            >, vilket ger dig ett riktigt bra erbjudande och både rena däck och
+            en fräsch bil!
+          </p>
         </div>
+
+        <div></div>
       </div>
     </main>
 
