--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
 
       <div id="container-1">
-        <video autoplay muted loop class="myVideo">
+        <video autoplay="autoplay" muted="muted" loop="loop" class="myVideo">
           <source src="./img/main.mp4" type="video/mp4">
           Your browser does not support HTML5 video.
         </video>
